<?xml version="1.0"?>
<package format="2">
  <name>Overtaking_algorithm</name>
  <version>0.0.1</version>
  <description>A ROS package for Overtaking Algorithm.</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>hmcl_msgs</build_depend>
  <build_depend>autoware_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>hmcl_msgs</build_export_depend>
  <build_export_depend>autoware_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>hmcl_msgs</exec_depend>
</package>